--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
         "maatwebsite/excel": "^3.1",
-        "milon/barcode": "^11.0"
+        "milon/barcode": "^11.0",
+        "spatie/laravel-permission": "^6.13"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
