--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/ui": "^4.6",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^11.0",
+        "phpseclib/phpseclib": "^3.0",
         "spatie/laravel-permission": "^6.13"
     },
     "require-dev": {
